# FastApi_SQLAlchemy

./: .gitignore  README.md  items_views.py  main.py  pyproject.toml
core/: config.py
core/models/: __init__.py  base.py  db_helper.py  product.py
items/: items_views.py
users/: crud.py  schemas.py  views.py
